# mol

./: .gitignore  Cargo.toml  readme.md
base/: Cargo.toml
base/src/: ast.rs  types.rs
check/: Cargo.toml
check/src/: infer.rs  lib.rs
check/tests/: test_check.rs
parser/: Cargo.toml
parser/src/: lib.rs  mol.lalrpop
parser/tests/: bin_expr_visitor.rs  test_lexer_parser.rs
src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: bin_expr_visitor.rs  main.rs  test_lexer_parser.rs
