[package]
name = "mol"
version = "0.1.0"
authors = ["Alexander Dodson <dodsonn@gmail.com>"]
edition = "2018"

[lib]
name = "mol"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0"}
mol_base = { path = "base", version = "0.1.0" }
mol_parser = { path = "parser", version = "0.1.0" }