[package]
name = "mol_parser"
version = "0.1.0"
authors = ["dsnam <dodsonn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"
mol_base = { path = "../base", version = "0.1.0"}


[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }